Fixed flex gaps for breakpoint and non-breakpoint fd classes

--- a/src/utilities/flex.css
+++ b/src/utilities/flex.css
@@ -74,11 +74,25 @@
   }
 }
 
+/**
+ * Flex direction gaps
+ */
 @for $size from 0 to 7 {
-  .fd-row.fg-$(size):not(:last-child) {
+  .fd-row.fg-$(size) *:not(:last-child) {
     margin-bottom: var(--size-$(size));
   }
-  .fd-column.fg-$(size):not(:last-child) {
+  .fd-column.fg-$(size) *:not(:last-child) {
     margin-right: var(--size-$(size));
+  }
+
+  @each $break in (sm, md, lg) {
+    @media (--$(break)) {
+      .fd-$(break)-row.fg-$(size) *:not(:last-child) {
+        margin-bottom: var(--size-$(size));
+      }
+      .fd-$(break)-column.fg-$(size) *:not(:last-child) {
+        margin-right: var(--size-$(size));
+      }
+    }
   }
 }
